# poiidx

./: .gitignore  README.md  mkdocs.yaml  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: release.yml
docs/: index.md
src/poiidx/: __about__.py  __init__.py  __main__.py  administrativeBoundary.py  baseModel.py  country.py  countryQuery.py  example.py  ext.py  geofabrik.py  pbf.py  poi.py  poiIdx.py  poiidx.py  regionFinder.py  scanner.py  system.py
tests/: test_poi.py  test_region.py
